# simFisica_CEVR

./: CMakeLists.txt  README.md  main.cpp
Poligonos/: README.md  main.cpp
Proyecto2doParcialSimuladores/: CMakeLists.txt  main.cpp
TOI y SFML/: CMakeLists.txt  README.md  main.cpp
holaLuna/: CMakeLists.txt  main.cpp
holaPelota/: CMakeLists.txt  main.cpp
